Delete endpoint for player object
